# xfce4-screenshooter

./: .gitignore  AUTHORS  CONTRIBUTORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure~  imgur-upload.sh  meson.build  meson_options.txt  module.xml  null.d  xfce4-screenshooter.1
doc/: Makefile.am
doc/C/: Makefile.am  xfce4-screenshooter.html
doc/fr/: xfce4-screenshooter.html
doc/fr/images/: Makefile.am
doc/id/: xfce4-screenshooter.html
doc/id/images/: Makefile.am
docs/manual/: Makefile.am  xfce-nochunk.xsl
docs/manual/C/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/C/images/: Makefile.am
docs/manual/ast/: index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/ca/: index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/da/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/da/images/: Makefile.am
docs/manual/es/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/es/images/: Makefile.am
docs/manual/fr/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/fr/images/: Makefile.am
docs/manual/gl/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/gl/images/: Makefile.am
docs/manual/id/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/id/images/: Makefile.am
docs/manual/it/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/it/images/: Makefile.am
docs/manual/ja/: Makefile  Makefile.am  Makefile.in  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml  xfce4-screenshooter.xml.in
docs/manual/ja/images/: Makefile  Makefile.am  Makefile.in
docs/manual/pt/: index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/tr/: Makefile.am  index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
docs/manual/tr/images/: Makefile.am
docs/manual/zh_CN/: index.html  index.xml.in  xfce4-screenshooter.html  xfce4-screenshooter.xml.in
icons/: Makefile.am  meson.build
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
lib/: Makefile.am  exo-job.c  exo-job.h  exo-simple-job.c  exo-simple-job.h  katze-throbber.c  katze-throbber.h  libscreenshooter.h  meson.build  resources.xml  screenshooter-actions.c  screenshooter-actions.h  screenshooter-capture-wayland.c  screenshooter-capture-wayland.h  screenshooter-capture-x11.c  screenshooter-capture-x11.h  screenshooter-capture.c  screenshooter-capture.h  screenshooter-custom-actions.c  screenshooter-custom-actions.h  screenshooter-dialogs.c  screenshooter-dialogs.h  screenshooter-format.c  screenshooter-format.h  screenshooter-global.h  screenshooter-imgur-dialog.c  screenshooter-imgur-dialog.h  screenshooter-imgur-dialog.ui  screenshooter-imgur.c  screenshooter-imgur.h  screenshooter-job-callbacks.c  screenshooter-job-callbacks.h  screenshooter-job.c  screenshooter-job.h  screenshooter-marshal.list  screenshooter-open-with.c  screenshooter-open-with.h  screenshooter-select-wayland.c  screenshooter-select-wayland.h  screenshooter-select-x11.c  (+13 more)
panel-plugin/: Makefile.am  Makefile.in  meson.build  screenshooter-plugin.c  screenshooter.c  screenshooter.desktop.in  screenshooter.desktop.in.in
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+31 more)
po-doc/: ChangeLog  LINGUAS  Makefile.am  ar.po  ast.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gl.po  id.po  it.po  ja.po  ko.po  lt.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sv.po  tr.po  ug.po  uk.po  xfce4-screenshooter.pot  zh_CN.po
protocols/: Makefile.am  meson.build
src/: Makefile.am  main.c  meson.build  screenshooter-dialogs.c  screenshooter-dialogs.h  screenshooter-plugin.c  screenshooter-utils.c  screenshooter-utils.h  screenshooter.c  screenshooter.desktop.in.in  xfce4-screenshooter.appdata.xml.in  xfce4-screenshooter.desktop.in  xfce4-screenshooter.desktop.in.in
test/: README.md  test.c  test.sh
